--- a/FormularioStackPanel/MainWindow.xaml
+++ b/FormularioStackPanel/MainWindow.xaml
@@ -7,6 +7,39 @@
         mc:Ignorable="d"
         Title="Formulario StackPanel"
         Icon="Assets\FormLogo.ico" MaxWidth="1000" MinWidth="500" MaxHeight="300" MinHeight="300">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="FontWeight"
+                    Value="Bold"></Setter>
+            <Setter Property="TextAlignment"
+                    Value="Center"></Setter>
+            <Setter Property="FontSize"
+                    Value="16"></Setter>
+            
+        </Style>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="Margin"
+                    Value="10"></Setter>
+        </Style>
+
+        <Style TargetType="{x:Type TextBox}"
+               x:Key="UltimoTextBox"
+               BasedOn="{StaticResource {x:Type TextBox}}">
+            <Setter Property="HorizontalAlignment"
+                    Value="Left"></Setter>
+            <Setter Property="Width"
+                    Value="600"></Setter>
+        </Style>
+
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Width"
+                    Value="100"></Setter>
+            <Setter Property="Margin"
+                    Value="10"></Setter>
+        </Style>
+
+    </Window.Resources>
+    
     <StackPanel>
         <StackPanel Margin="10" Height="50">
             <StackPanel.Background>
@@ -15,8 +48,8 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock FontWeight="Bold" TextAlignment ="Center" FontSize="16">Nombre</TextBlock>
-            <TextBox Margin="10"></TextBox>
+            <TextBlock >Nombre</TextBlock>
+            <TextBox></TextBox>
         </StackPanel>
         
         <StackPanel Margin="10" Height="50">
@@ -26,8 +59,8 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock FontWeight="Bold" TextAlignment ="Center" FontSize="16">Dirección</TextBlock>
-            <TextBox Margin="10"></TextBox>
+            <TextBlock>Dirección</TextBlock>
+            <TextBox></TextBox>
         </StackPanel>
         
         <StackPanel Margin="10" Height="50">
@@ -37,13 +70,13 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock FontWeight="Bold" TextAlignment ="Center" Text="Correo Eletrónico" FontSize="16"/>
-            <TextBox HorizontalAlignment="Left" Margin="10" Width="600"></TextBox>
+            <TextBlock>Correo Eletrónico</TextBlock>
+            <TextBox Style="{StaticResource UltimoTextBox}"></TextBox>
         </StackPanel>
 
         <StackPanel  Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Margin="10" Width="100" >Aceptar</Button>
-            <Button Margin="10" Width="100">Cancelar</Button>
+            <Button>Aceptar</Button>
+            <Button>Cancelar</Button>
         </StackPanel>
 
     </StackPanel>
